[gd_scene load_steps=30 format=2]

[ext_resource path="res://Player/BOOMERAND_PICO8.png" type="Texture" id=1]
[ext_resource path="res://Player/Boomerang.gd" type="Script" id=2]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=3]
[ext_resource path="res://Effects/trail.gd" type="Script" id=4]
[ext_resource path="res://Particles/star.png" type="Texture" id=5]
[ext_resource path="res://Hurtboxes + HitBoxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hurtboxes + HitBoxes/Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/BoomerangHitbox.gd" type="Script" id=8]
[ext_resource path="res://Particles/white ball.png" type="Texture" id=9]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.496689, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.679688, 0, 0 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.0596026, 0.980132, 1 )
colors = PoolColorArray( 128.498, 128.498, 127.757, 0.784314, 17.1647, 17.1647, 17.1647, 0, 1, 1, 1, 0.53 )

[sub_resource type="Curve" id=3]
max_value = 5.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.994505, 1.08523 ), 1.4, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.00662252, 0.154362, 0.167785, 0.348993, 0.38255, 0.536913, 0.563758, 0.812081, 0.825503, 1 )
colors = PoolColorArray( 1, 0.870117, 0, 0, 0.170592, 0.977843, 0.813145, 0.149619, 0.0935103, 0.971487, 0.906852, 0.206001, 0.0588235, 0.968627, 0.94902, 0.231373, 0.0365569, 0.398218, 0.994452, 0.492532, 0.0509804, 0.160784, 1, 0.615686, 0.903434, 0.0294118, 0.915965, 0.58343, 1, 0.0392157, 0.945098, 1, 0.992157, 0.819608, 0.109804, 0.741176, 0.989258, 1, 0, 1 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 48, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 72, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 24, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 72, 48, 24, 24 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 4.97656

[sub_resource type="CircleShape2D" id=19]

[sub_resource type="Animation" id=20]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.1 ),
"transitions": PoolRealArray( 1, 1, 2.2974 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles2D/inicialParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.08, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Boomerang" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )
throw_speed = 120.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -0.445114, 0.509907 )
amount = 16
lifetime = 0.3
local_coords = false
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 9.26
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 0.1
angular_velocity = 720.0
radial_accel = -5.75
angle = 449.0
angle_random = 1.0
scale_amount = 0.5
scale_amount_random = 0.11
color_ramp = SubResource( 1 )
hue_variation = -1.0
hue_variation_random = 1.0

[node name="inicialParticles" type="CPUParticles2D" parent="CPUParticles2D"]
position = Vector2( 0.445114, -0.509907 )
scale = Vector2( 0.9, 0.9 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.69
lifetime_randomness = 0.45
local_coords = false
texture = ExtResource( 9 )
emission_shape = 1
emission_sphere_radius = 2.66
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
scale_amount = 0.3
scale_amount_random = 0.2
color_ramp = SubResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
width_curve = SubResource( 3 )
gradient = SubResource( 4 )
script = ExtResource( 4 )
targetPath = NodePath("..")
trailLength = 20

[node name="sombra" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.388235 )
position = Vector2( -0.473351, 7.41565 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 17 )
frame = 3
speed_scale = 5.0
playing = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.15

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
position = Vector2( -0.255775, 0.170515 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 18 )
disabled = true

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_mask = 16
script = ExtResource( 8 )
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 19 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/throw = SubResource( 20 )
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
